tests/snapshots/snapshot_comprehensive__snap_execution_mode_variants.snap
---
source: tests/snapshot_comprehensive.rs
expression: variants
---
[
  "mapped",
  "passthrough"
]
