tests/snapshots/snapshot_comprehensive__snap_min_support_variants.snap
---
source: tests/snapshot_comprehensive.rs
expression: variants
---
[
  "native",
  "emulated",
  "any"
]
