tests/snapshots/snapshot_comprehensive__snap_outcome_all_variants.snap
---
source: tests/snapshot_comprehensive.rs
expression: variants
---
[
  "complete",
  "partial",
  "failed"
]
