tests/snapshots/snapshot_comprehensive__snap_policy_empty.snap
---
source: tests/snapshot_comprehensive.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
