tests/snapshots/snapshot_comprehensive__snap_policy_full_lockdown.snap
---
source: tests/snapshot_comprehensive.rs
expression: p
---
{
  "allowed_tools": [
    "Read"
  ],
  "disallowed_tools": [
    "Bash*"
  ],
  "deny_read": [
    "**/.env"
  ],
  "deny_write": [
    "**/*"
  ],
  "allow_network": [],
  "deny_network": [
    "*"
  ],
  "require_approval_for": [
    "Read"
  ]
}
