tests/snapshots/snapshot_comprehensive__snap_policy_network_rules.snap
---
source: tests/snapshot_comprehensive.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [
    "*.example.com",
    "api.github.com"
  ],
  "deny_network": [
    "evil.example.com",
    "*.malware.net"
  ],
  "require_approval_for": []
}
