tests/snapshots/snapshot_comprehensive__snap_policy_paths_only.snap
---
source: tests/snapshot_comprehensive.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [
    "**/.env",
    "**/.env.*",
    "**/id_rsa"
  ],
  "deny_write": [
    "**/.git/**",
    "**/node_modules/**"
  ],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
